WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31652
ASSERT thrown when a high value is used for roman numerals in lists
https://bugs.webkit.org/show_bug.cgi?id=31652
Summary
ASSERT thrown when a high value is used for roman numerals in lists
Rahul Kuchhal
Reported
2009-11-18 16:17:25 PST
WebKit throws ASSERT for this html: <html> <body> <ol start="3888" type="i"> <li>Foo </li> </ol> </body> </html> Posting one potential fix and a layout test soon.
Attachments
potential fix for assert
(3.14 KB, patch)
2009-11-18 16:21 PST
,
Rahul Kuchhal
eric
: review-
Details
Formatted Diff
Diff
patch with updated layout test
(2.59 KB, patch)
2009-11-19 08:52 PST
,
Rahul Kuchhal
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rahul Kuchhal
Comment 1
2009-11-18 16:21:57 PST
Created
attachment 43470
[details]
potential fix for assert
Eric Seidel (no email)
Comment 2
2009-11-19 01:08:02 PST
Comment on
attachment 43470
[details]
potential fix for assert This should be a dumpAsText() test since it is just testing for a crash. The test should say something like: PASS: this test did not crash,
bug 31652
for the output.
Rahul Kuchhal
Comment 3
2009-11-19 08:52:13 PST
Created
attachment 43507
[details]
patch with updated layout test
WebKit Commit Bot
Comment 4
2009-11-19 12:25:28 PST
Comment on
attachment 43507
[details]
patch with updated layout test Clearing flags on attachment: 43507 Committed
r51201
: <
http://trac.webkit.org/changeset/51201
>
WebKit Commit Bot
Comment 5
2009-11-19 12:25:33 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug