2009-11-19  Rahul Kuchhal  <kuchhal@chromium.org>

Reviewed by Darin Adler.

        Do not assert when a high number is used for roman numerals in lists.
        https://bugs.webkit.org/show_bug.cgi?id=31652

        * fast/lists/ol-start-roman.html: Added.
        * platform/mac/fast/lists/ol-start-roman-expected.txt: Added.
2009-11-19  Rahul Kuchhal  <kuchhal@chromium.org>

        Reviewed by Darin Adler.

        Do not assert when a high number is used for roman numerals in lists.
        https://bugs.webkit.org/show_bug.cgi?id=31652

        Test: fast/lists/ol-start-roman.html

        * rendering/RenderListMarker.cpp:
        (WebCore::toRoman): Increase the char array size.

Canonical link: https://commits.webkit.org/42630@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51201 268f45cc-cd09-0410-ab3c-d52691b4dbfc